minor layout issues

--- a/dcm4chee/dcm4chee-web/trunk/dcm4chee-web-common/src/main/resources/org/dcm4chee/web/common/base/base-style.css
+++ b/dcm4chee/dcm4chee-web/trunk/dcm4chee-web-common/src/main/resources/org/dcm4chee/web/common/base/base-style.css
@@ -2,14 +2,14 @@
 	Base CSS
 */
 
-body,h1,h2,h3,h4,p,ul,ol,li,dl,dt,dd,div,td,th { font-family:Verdana,sans-serif; }
+body,h1,h2,h3,h4,p,ul,ol,li,dl,dt,dd,div,td,th { font-family:Verdana,sans-serif; font-size:12px; }
 h1 { font-size:26px; margin-bottom:18px; }
 h1.ph1 { font-size:21px; margin-bottom:18px; }
 h2 { font-size:21px; margin-bottom:18px; }
 h3 { font-size:16px; }
 h4 { font-size:13.4px; }
 
-p,ul,ol,li,dl,dt,dd,div,td,th { font-size:13.4px; }
+p,ul,ol,li,dl,dt,dd,div,td,th { font-size:12px; }
 
 img {border: none;}
 
